# libpseudogpio

./: CMakeLists.txt  README.md  libpseudogpio.pc.in
src/: libpseudogpio.cpp  libpseudogpio.h
